--- a/index.html
+++ b/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Countdowm</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    
+    <div class="contenido">
+        <div class="imagen">
+            <img src="navidad_01.png" alt="Imagen referente a navidad">
+        </div>
+        <div class="informacion">
+            <h3>Cuenta regresiva para la llegada de la Navidad</h3>
+            <h4 class="Navidad">
+                The counter will stop on Sunday, December 25, 2022 at 00:00 am
+            </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat 
+            explicabo corrupti optio accusantium deserunt itaque dolor facilis
+            commodi sint dolorum quibusdam, quo similique asperiores! Est rem 
+            qui molestiae repellat delectus?
+            </p>
+            <div class="contador">
+                <!--DIAS-->
+                <div class="formato">
+                    <div>
+                        <h4 class="dias">30</h4>
+                        <span>Días</span>
+                    </div>
+                </div>
+
+                <!--HORAS-->
+                <div class="formato">
+                    <div>
+                        <h4 class="hr">7</h4>
+                        <span>Horas</span>
+                    </div>
+                </div>
+
+                <!--MINUTOS-->
+                <div class="formato">
+                    <div>
+                        <h4 class="min">44</h4>
+                        <span>Minutos</span>
+                    </div>
+                </div>
+
+                <!--SEGUNDOS-->
+                <div class="formato">
+                    <div>
+                        <h4 class="seg">43</h4>
+                        <span>Segundos</span>
+                    </div>
+                </div>
+                <!--FIN DE FORMATOS-->
+            </div>
+        </div>
+    </div>
+    <script src="funci.js"></script>
 </body>
 </html>
