--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="contenido">
         <div class="imagen">
-            <img src="navidad_01.jpg" alt="">
+            <img src="navidad_01.png" alt="Imagen referente a navidad">
         </div>
         <div class="informacion">
-            <h3>OLD IPHONE GIVEAWAY</h3>
+            <h3>Cuenta regresiva para la llegada de la Navidad</h3>
             <h4 class="Navidad">
                 The counter will stop on Sunday, December 25, 2022 at 00:00 am
             </h4>
@@ -26,28 +26,31 @@
                 <!--DIAS-->
                 <div class="formato">
                     <div>
-                        <h4 class="dias">32</h4>
+                        <h4 class="dias">30</h4>
                         <span>Días</span>
                     </div>
                 </div>
+
                 <!--HORAS-->
                 <div class="formato">
                     <div>
-                        <h4 class="hr">20</h4>
+                        <h4 class="hr">7</h4>
                         <span>Horas</span>
                     </div>
                 </div>
+
                 <!--MINUTOS-->
                 <div class="formato">
                     <div>
-                        <h4 class="min">10</h4>
+                        <h4 class="min">44</h4>
                         <span>Minutos</span>
                     </div>
                 </div>
+
                 <!--SEGUNDOS-->
                 <div class="formato">
                     <div>
-                        <h4 class="seg">60</h4>
+                        <h4 class="seg">43</h4>
                         <span>Segundos</span>
                     </div>
                 </div>
