Cuenta_Regresiva_Terminado

--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdowm</title>
     <link rel="stylesheet" href="estilo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="contenido">
         <div class="imagen">
-            <img src="navidad_01.png" alt="Imagen referente a navidad">
+            <img src="navidad_01.jpg" alt="Imagen referente a navidad">
         </div>
         <div class="informacion">
-            <h3>Cuenta regresiva para la llegada de la Navidad</h3>
+            <h3>CUENTA REGRESIVA PARA LA LLEGADA DE LA NAVIDAD</h3>
             <h4 class="Navidad">
                 The counter will stop on Sunday, December 25, 2022 at 00:00 am
             </h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat 
-            explicabo corrupti optio accusantium deserunt itaque dolor facilis
-            commodi sint dolorum quibusdam, quo similique asperiores! Est rem 
-            qui molestiae repellat delectus?
+            <p>Que las celebraciones de Navidad estén marcadas por el deseo de 
+                una nueva vida y un nuevo camino que nos lleve a un único objetivo: 
+                sembrar el amor y la paz. Que la Navidad sea un símbolo de amor y paz 
+                en el corazón de todo el mundo!!! Te deseo una Feliz Navidad llena 
+                de paz y armonía. Que Dios os bendiga a todos.
             </p>
             <div class="contador">
                 <!--DIAS-->
                 <div class="formato">
                     <div>
                         <h4 class="dias">30</h4>
-                        <span>Días</span>
+                        <span>DÍAS</span>
                     </div>
                 </div>
 
@@ -35,7 +38,7 @@
                 <div class="formato">
                     <div>
                         <h4 class="hr">7</h4>
-                        <span>Horas</span>
+                        <span>HORAS</span>
                     </div>
                 </div>
 
@@ -43,7 +46,7 @@
                 <div class="formato">
                     <div>
                         <h4 class="min">44</h4>
-                        <span>Minutos</span>
+                        <span>MIN.</span>
                     </div>
                 </div>
 
@@ -51,7 +54,7 @@
                 <div class="formato">
                     <div>
                         <h4 class="seg">43</h4>
-                        <span>Segundos</span>
+                        <span>SEG.</span>
                     </div>
                 </div>
                 <!--FIN DE FORMATOS-->
