--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdowm</title>
     <link rel="stylesheet" href="estilo.css">
+    <!--Link de los tipos de letras que se usaran-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -61,6 +62,6 @@
             </div>
         </div>
     </div>
-    <script src="funci.js"></script>
+    <script src="funci.js"></script> <!--Enlazar el js-->
 </body>
 </html>
